# MMO

./: .gitignore  readme.txt
doc/: a.rar  游戏构想.doc  结构.docx
module/: src - 快捷方式.lnk
module/team/: teammodule.cpp  teammodule.h
project/: CMakeLists.txt  makebuild.bat
project/demo/: CMakeLists.txt
project/demo/public/: headerext.cpp
project/demo/src/: main.cpp
project/gateserver/: CMakeLists.txt
project/gateserver/interface/: interfacenet.h  ioserver.cpp  ioserver.h  tcpaccept.cpp  tcpaccept.h  tcpconnector.cpp  tcpconnector.h  tcpsocket.cpp  tcpsocket.h
project/gateserver/net/: acceptclient.cpp  acceptclient.h  client.cpp  client.h  clientconnector.cpp  clientconnector.h  ioservice.cpp  ioservice.h  lanworldsocket.cpp  lanworldsocket.h  wanacceptor.cpp  wanacceptor.h  wansocket.cpp  wansocket.h
project/gateserver/public/: header.cpp  header.h  ringbuffer.cpp  ringbuffer.h
project/gateserver/src/: main.cpp
project/loginserver/: CMakeLists.txt
project/loginserver/net/: client.cpp  client.h  clientmanager.cpp  clientmanager.h  netmanager.cpp  netmanager.h  worldconnector.cpp  worldconnector.h
project/loginserver/public/: app.cpp  app.h
project/protocol/: CMakeLists.txt  csid.pb.cc  csid.pb.h  game.pb.cc  game.pb.h  inc.pb.cc  inc.pb.h  msg.pb.cc  msg.pb.h  protoinc.h  scsid.pb.cc  scsid.pb.h  smsg.pb.cc  smsg.pb.h
project/worldserver/: CMakeLists.txt
project/worldserver/net/: acceptormanager.cpp  acceptormanager.h  clientacceptor.cpp  clientacceptor.h  clientsocket.cpp  clientsocket.h  loginclient.cpp  loginclient.h  loginclientmanager.cpp  loginclientmanager.h  netmanager.cpp  netmanager.h
project/worldserver/public/: app.cpp  app.h
protoc/: csid.proto  msg.proto  protoc.bat  scsid.proto  smsg.proto
public/include/: asioinc.h  loginc.h  stringjoin.h  utility.h
public/include/asio/: tcpaccept.h  tcpconnector.h  tcpsocket.h
public/include/common/: boostheader.h  file.h  log.h  ringbuffer.h  safequeue.h  thread.h  timer.h
public/src/: exitchildthread.cpp  exitchildthread.h  main.cpp  mainthread.cpp  mainthread.h
